--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import url('button.css');
 @import url('header.css');
 @import url('main.css');
+@import url('first_page.css');
 @import url('main_article.css');
 @import url('reting.css');
 @import url('footer.css');
