--- a/css/first_page.css
+++ b/css/first_page.css
@@ -28,6 +28,7 @@
     border-radius: 5px;
     display: block;
     position: relative;
+    max-width: 610px;
     width: 600px;
     object-fit: cover;
 }
