--- a/css/button.css
+++ b/css/button.css
@@ -4,35 +4,16 @@
 	font-size: 20px;
 	line-height: 26px;
 	font-weight: 700;
+	padding: 5px 35px 0 35px;
 	background-color: #ffffff00;
-	padding:  0 auto ;
 	border-bottom: 1px solid #2b2b30
 }
-@media(max-width:1300px){
-
+@media(max-width:950px){
 	.button a{
-		font-size: 18px;
+		width: 25%;
 	}
-
-}
-@media(max-width:1100px){
-
-	.button a{
-		font-size: 16px;
+	.button{
+		margin-bottom: 10px;
 	}
-}
-@media(max-width:800px){
-
-	.button a{
-		font-size: 14px;
-	}
-
-}
-@media(max-width:600px){
-
-	.button a{
-		font-size: 12px;
-	}
-
 }
 
