--- a/css/header.css
+++ b/css/header.css
@@ -1,28 +1,29 @@
 .header{
 	position: relative;
+	width: 100%;
 }
 .header_wrap{
 	background:url(../image/logo3.png) center no-repeat;
     background-size: cover;
 	position: relative;
 	height: 45vh;
-	max-width: 100pc;
+	width: 100%;
 }
 .header_top{
 	position: relative;
 	display: flex;
 	background-color: #0f0f11;
-	max-width: 100pc;
+	width: auto;
 	justify-content: space-between;
+	flex-wrap: wrap;
 	align-items: center;
 	padding: 8px 30px;
 	font-family: 'Oswald', sans-serif;
-
 }
 .header a:hover{
 	background-color: #ff0036;
 	transition: 0.4s all;
-	padding: 5px 35px 5px 35px;
+	padding: 5px 35px;
 }
 
 @media(max-width:1450px){
@@ -35,18 +36,23 @@
 		height: 28vh;
 	}
 }
-@media(max-width:850px){
+@media(max-width:950px){
 	.header_wrap{
 		height: 24vh;
+	}
+		.header_top{
+		padding: 10px 15px;
 	}
 }
-@media(max-width:800px){
+@media(max-width:850px){
 	.header_wrap{
-		height: 24vh;
+		height: 20vh;
 	}
+
 }
 @media(max-width:750px){
 	.header_wrap{
 		height: 16vh;
 	}
 }
+
