--- a/css/reting.css
+++ b/css/reting.css
@@ -8,7 +8,7 @@
 .result_f{
     height: 20px;
     width:  80px;
-    margin: 0 0 10px 0;
+    margin-bottom : 10px;
     padding: 22px;
     color: white;
     font-weight: 400;
