--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
 @import url('reting.css');
 @import url('footer.css');
 @import url('comunication.css');
+@import url('advices.css');
+@import url('generation.css');
 @import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Lemonada:400,600&display=swap');
