--- a/css/comunication.css
+++ b/css/comunication.css
@@ -6,7 +6,6 @@
 
 }
 .welcome{    
-    border-radius: 10px;
     padding: 20px 30px;
     background-color: rgba(39, 38, 38, 0.6);
     font-size: 18px;
@@ -16,6 +15,7 @@
     text-align: justify;
     font-family: 'Cuprum', sans-serif;
     margin-bottom: 20px;    
+    border-bottom: 3px solid white;
 }
 .welcome span{
     font-size: 20px;
@@ -56,6 +56,7 @@
 }
 .comm_text textarea{
     width: 100%;
+    max-width: 830px;
     min-width: 160px;
     min-height: 70px;
     height: 100px;
@@ -74,14 +75,17 @@
 }
 .submit_btn, .submit_btn_two{
     display: inline-block;
+    position: relative;
     vertical-align: top;
     text-align: center;
-    margin: 60px auto auto 60px;
+    margin: 60px auto auto 70px;
 }
 .submit_btn_two{
     display: none;
 }
 .submit_btn button, .submit_btn_two button{
+    display: block;
+    position: absolute;
     border-radius: 10px;
     width: 200px;
     height: 150px;
@@ -156,6 +160,14 @@
     }
     .communication input{
         width: 100%;
+    }
+    .submit_btn_two{
+        margin: 50px auto auto auto;
+    }
+    .submit_btn_two button{
+        display: block;
+        position: relative;
+        height: 100px;
     }
 
 }
