--- a/css/main_article.css
+++ b/css/main_article.css
@@ -1,5 +1,5 @@
 .information{
-    background-color: rgb(53, 53, 53);
+    background-color: rgba(41, 41, 41, 0.8);
     color: rgb(221, 203, 170) ;
     font-family: 'Roboto', sans-serif;
     border-radius: 5px;
@@ -10,10 +10,11 @@
     position: relative;
     width: 100%;
     padding: 15px 5px 30px 5px;
+    border-bottom: 3px solid white;
 }
 .title_autor{
     position: relative;
-    padding: 0 30px 15px 0;
+    padding: 0 30px 0 0;
 }
 .title_autor h2{
     font-weight: 700;
@@ -34,12 +35,38 @@
 }
 .anotation{
     text-indent: 20px;
-    padding-top: 10px;
+    padding: 10px 0;
     text-align: justify;
     border-top: 3px solid rgb(233, 222, 203);
     font-weight: 350;
 	font-size: 16px;
     line-height: 26px;
+}
+.tegs{
+    text-indent: 20px;
+    padding: 10px 0;
+    text-align: justify;
+    border-top: 3px solid rgb(233, 222, 203);
+    font-weight: 500;
+	font-size: 18px;
+    line-height: 26px;
+}
+.tegs span{
+    font-weight: 700;
+    font-size: 20px;
+}
+.system_requirements{
+    position: relative;
+    display: block;
+    width: 100%;
+    border-spacing: 80px 20px;
+    border-color: aliceblue;
+}
+.system_requirements td{
+    width: 450px;
+}
+.system_requirements tr[id="last"] td{
+    border-bottom: 1px solid aliceblue;
 }
 .title_img {
     border: 3px solid rgb(233, 222, 203);
@@ -74,11 +101,13 @@
 }
  .youtube iframe{
     border: 3px solid rgb(233, 222, 203);
+    border-radius: 3px;
     width: 784px;
     height: 441px;
 }
 .article_text img{
     border: 3px solid rgb(233, 222, 203);
+    border-radius: 3px;
     display: block;
     position: relative;
     margin: 10px auto;
@@ -94,11 +123,14 @@
         height: 378px;
     }
     .title_img img{
-        width: 350px;
+        width: 450px;
     }
     .article_text img{
         width: 650px;
     
+    }
+    .system_requirements{
+        border-spacing: 60px 15px;
     }
 }
 @media(max-width:1100px){
@@ -107,10 +139,14 @@
         height: 315px;
     }
     .title_img img{
-        width: 300px;
+        width: 400px;
     }
     .article_text img{
         width: 600px;
+    }
+    .system_requirements{
+        border-spacing: 40px 10px;
+        text-align: center;
     }
 
 }
@@ -119,11 +155,20 @@
         width: 448px;
         height: 252px;
     }
-    .title_img img{
-        width: 200px;
-    }
     .article_text img{
-        width: 400px;
+        width: 450px;
+    }
+    .system_requirements{
+        border-spacing: 20px 10px;
+    }
+    .tegs{
+        font-size: 18px;
+    }
+    .system_requirements{
+        border-collapse: collapse;
+    }
+    .system_requirements td{ 
+        padding: 2px 10px;
     }
 
 }
@@ -132,11 +177,23 @@
     .title_img{
         display: none;
     }
-
+    .system_requirements td{ 
+        border-spacing: 10px;
+        border: 1px solid aliceblue;
+        padding: 2px 5px;
+    }
 }
 @media(max-width:700px){
     .information{
         padding: 20px 10px;
+    }
+    .youtube iframe{
+        width: 304px;
+        height: 172px;
+    }
+
+    .article_text img{
+        width: 350px;
     }
 
 }
