--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 @import url('footer.css');
 @import url('comunication.css');
 @import url('advices.css');
+@import url('video.css');
 @import url('generation.css');
 @import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
